Fix alignments

--- a/custom/custom.css
+++ b/custom/custom.css
@@ -8,6 +8,29 @@ h1, h2, h3, h4 {
 	font-weight: 700;
 }
 
+.site-header, .site-footer {
+
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
+.site-footer {
+
+	border-top: 1px solid #C6C6C5;
+	color: #777;
+	font-size: 14px;
+	font-size: .875rem;
+}
+
+@media only screen and (min-width: 75em) {
+
+	.site-header, .site-footer {
+
+		padding-top: 50px;
+		padding-bottom: 50px;
+	}
+}
+
 .site-title {
 
 	display: inline-block;
@@ -25,10 +48,11 @@ h1, h2, h3, h4 {
 	width: 190px;
 }
 
-.page-footer {
+@media only screen and (min-width: 75em) {
 
-	border-top: 1px solid #C6C6C5;
-	color: #777;
-	font-size: 14px;
-	line-height: 20px;
+	.site-title > a[rel="home"] {
+
+		height: 76px;
+		width: 300px;
+	}
 }
