--- a/style.css
+++ b/style.css
@@ -25,8 +25,23 @@ html {
 	font-size: 16px;
 }
 
+@media only screen and (min-width: 75em) {
+
+	html {
+
+		font-size: 18px;
+	}
+}
+
 /* == font and links == */
-body { font-family: 'Open Sans Condensed', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 28px; color: #231F20; -ms-word-wrap: break-word; word-wrap: break-word; }
+body {
+	font-family: 'Open Sans Condensed', Helvetica, Arial, sans-serif;
+	font-size: 1em;
+	line-height: 1.5em;
+	color: #231F20;
+	-ms-word-wrap: break-word;
+	word-wrap: break-word;
+}
 a { -webkit-transition: 0.2s ease-in-out all; -moz-transition: 0.2s ease-in-out all; -o-transition: 0.2s ease-in-out all; transition: 0.2s ease-in-out all; }
 a:link, a:visited { color: #ea5644; text-decoration: none; }
 a:hover, a:focus { color: #111; outline: none; }
@@ -34,20 +49,43 @@ a.moretag { font-size: 12px; text-transform: uppercase; }
 /* == END font and links == */
 
 /* == blockquotes == */
-blockquote, blockquote p { font-size: 18px; font-style: italic; line-height: 28px; }
+blockquote, blockquote p { font-size: 18px; font-style: italic; }
 /* == END blockquotes == */
 
 /* == titles, titles custom == */
 h1, h2, h3, h4, h5, h6 { font-weight: 700; color: #231F20; }
 h1, h2, h3 { margin: 40px 0 20px;}
 h4, h5, h6 { margin: 40px 0 10px;}
-h1 { font-size: 28px; line-height: 36px; }
-h2 { font-size: 24px; line-height: 30px; }
-h3 { font-size: 22px; line-height: 28px; }
-h4 { font-size: 20px; line-height: 26px; }
-h5 { font-size: 18px; line-height: 24px; }
-h6, #reply-title { font-size: 16px; line-height: 20px; text-transform: uppercase; }
+h1 {
+	font-size: 28px;
+	font-size: 1.75rem;
+}
+h2 {
+	font-size: 24px;
+	font-size: 1.5rem;
+}
+h3 {
+	font-size: 22px;
+	font-size: 1.375rem;
+}
+h4 {
+	font-size: 20px;
+	font-size: 1.25rem;
+}
+h5 {
+	font-size: 18px;
+	font-size: 1.125rem;
+}
+
+h6, #reply-title {
+
+	font-size: 16px;
+	font-size: 1rem;
+	text-transform: uppercase;
+}
+
 #reply-title { margin-top: 0; }
+
 h1 > i, h2 > i, h3 > i, h4 > i, h5 > i, h6 > i { margin-right: 10px; }
 .page-title { font-size: 28px; font-weight: 700; line-height: 36px; margin-top: 0; margin-bottom: 0; padding-bottom: 15px; border-bottom: 1px solid rgba( 0, 0, 0, 0.05 ); }
 .title-widget { color: #898989; font-size: 13px; font-weight: 300; line-height: 1; text-transform: uppercase; margin: 0 0 40px 0; position: relative; }
@@ -167,7 +205,7 @@ table > colgroup + thead > tr:first-child > td, table > thead:first-child > tr:f
 #drop-down-left ul .dropdown-menu-sub-indicator:after { content: ""; display: block; position: absolute; top: 50%; margin-top: -6px; border-top: 6px solid transparent; border-bottom: 6px solid transparent; border-left: 6px solid #CCC; }
 #drop-down-left a:hover, #drop-down-left li.dropdown-menu-hover > a, #drop-down-left li.current-menu-item > a { color: #ea5644; background-color: #FFF; }
 /* smaller devices menu */
-#mobile-nav-switch { display: none; width: 24px; position: absolute; right: 0; top: 50%; margin-top: -12px; z-index: 8888; }
+#mobile-nav-switch { display: none; width: 24px; position: absolute; right: 8px; right: .5rem; top: 50%; margin-top: -12px; z-index: 8888; }
 #mobile-nav-switch:focus { outline: none; }
 span.alter-menu-icon { display: block; width: 24px; height: 24px; background: url(public/img/alter-menu.png) 0 0 no-repeat; -webkit-transform: rotate(0deg); -moz-transform: rotate(0deg); -ms-transform: rotate(0deg); -o-transform: rotate(0deg); transform: rotate(0deg); -webkit-transition: transform 250ms ease-out 0s; -moz-transition: transform 250ms ease-out 0s; -o-transition: transform 250ms ease-out 0s; transition: transform 250ms ease-out 0s; }
 .open span.alter-menu-icon { background-position: 0 -24px; -webkit-transform: rotate(-180deg); -moz-transform: rotate(-180deg); -ms-transform: rotate(-180deg); -o-transform: rotate(-180deg); transform: rotate(-180deg); -webkit-transition: transform 250ms ease-out 0s; -moz-transition: transform 250ms ease-out 0s; -o-transition: transform 250ms ease-out 0s; transition: transform 250ms ease-out 0s; }
@@ -690,7 +728,7 @@ td#next { text-align: right; padding: 5% 2%; }
 .news-meta span:not(:last-child) { padding-right: 10px; margin-right: 10px; border-right: 1px solid rgba( 0, 0, 0, 0.05 ); }
 .news-summary { margin-top: 10px; }
 .news-mini-wrap .news-summary p { font-size: 14px; line-height: 24px; margin: 0; }
-.news-body { margin-top: 20px; }
+.news-body {  }
 .news-body p:last-child { margin-bottom: 0; }
 .news-tags { margin-top: 40px; }
 .cat-walk:not(:first-child) { display: inline; margin-left: 5px; }
@@ -955,7 +993,14 @@ a.list-group-item.active > .badge, .nav-pills > .active > a > .badge { backgroun
 .row.no-gutter [class*='col-']:not(:first-child), .row.no-gutter [class*='col-']:not(:last-child) { padding-right: 0; padding-left: 0; }
 .row.no-gutter .row.gutter [class*='col-']:not(:first-child), .row.no-gutter .row.gutter [class*='col-']:not(:last-child) { padding-right: 15px; padding-left: 15px; }
 .row.fullwidth { margin-left: -15px; margin-right: -15px; }
-.col-padded { padding: 30px; background-color: #FFF; /*overflow: hidden;*/ }
+.col-padded {
+	padding-left: 30px;
+	padding-right: 30px;
+}
+.col-vpadded {
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
 .col-shaded { background-color: #F1F1F1; /*rgba( 0, 0, 0, 0.02 );*/ }
 .col-naked { background-color: transparent; }
 .section-paint { background-color: #FFF; }
